// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`comment editor 1`] = `
"<div><textarea class=\\"form-control\\" placeholder=\\"entry.placeholder\\"></textarea>
  <div class=\\"text-right text-end btn-actions\\"><button class=\\"btn btn-sm p-2 btn-primary fs-7\\">entry.save_comment</button><button class=\\"btn btn-sm p-2 btn-default fs-7\\">entry.cancel_edit</button></div>
</div>"
`;

exports[`comment editor with ckeditor 1`] = `
"<div>
  <div><textarea></textarea></div>
  <div class=\\"text-right text-end btn-actions\\"><button class=\\"btn btn-sm p-2 btn-primary fs-7\\">entry.save_comment</button><button class=\\"btn btn-sm p-2 btn-default fs-7\\">entry.cancel_edit</button></div>
</div>"
`;
